fixed button bleed problem

--- a/public_html/css/custom-style.css
+++ b/public_html/css/custom-style.css
@@ -83,7 +83,7 @@ h1 {
 	color: whitesmoke;
 	background-color: rgb(108, 155, 155);
 	padding: 10px 16px;
-	font-size: 1.5em;
+	font-size: 1.25em;
 	line-height: 1.33;
 }
 
@@ -112,7 +112,7 @@ h1 {
 .btn-danger {
 	border: 2px solid transparent;
 	padding: 10px 16px;
-	font-size: 1.5em;
+	font-size: 1.25em;
 	line-height: 1.33;
 }
 
@@ -135,7 +135,7 @@ h1 {
 .btn-warning {
 	border: 2px solid transparent;
 	padding: 10px 16px;
-	font-size: 1.5em;
+	font-size: 1.25em;
 	line-height: 1.33;
 }
 
@@ -161,7 +161,7 @@ h1 {
 	color: whitesmoke;
 	background-color: rgb(47, 79, 79);
 	padding: 10px 16px;
-	font-size: 1.5em;
+	font-size: 1.25em;
 	line-height: 1.33;
 }
 
@@ -302,7 +302,9 @@ only screen and (max-width: 760px),
 
 .home-nav a:hover {
 	color: darkslategray;
-	border: 2px darkslategray;
+	background-color: whitesmoke;
+	border: 2px solid whitesmoke;
+	text-decoration: none;
 
 }
 
